# redacted-tes

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py  test_main.py
app/internal/: config.py  dao.py  db.py  models.py
app/internal/service/: imoveis.py  risk_evaluation.py  test_risk_evaluation.py
app/routers/: imoveis.py
deployments/: Dockerfile  docker-compose.yaml  migrations.Dockerfile
migrations/: env.py
migrations/versions/: 7a4a423a0c12_bootstrap_database.py  e00824bb465e_bootstrap_database.py
