[project]
name = "redacted-tes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.0",
    "fastapi[standard]>=0.115.6",
    "psycopg[binary]>=3.2.3",
    "sqlalchemy[asyncio]>=2.0.36",
]

[uv.tool]
dev-dependencies = [
    "python-dotenv>=1.0.1"
]
